Kubernetes/Extensions/admission-webhook/simple/deploy/1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-webhook-server-deployment
  namespace: webhook-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-webhook-server
  template:
    metadata:
      labels:
        app: simple-webhook-server
    spec:
      containers:
        - name: simple-webhook-server
          image: togettoyou/simple-webhook-server:latest
          imagePullPolicy: IfNotPresent
          args:
            - --tls-crt-file=/etc/webhook/certs/tls.crt
            - --tls-key-file=/etc/webhook/certs/tls.key
            - --port=443
          volumeMounts:
            - name: cert
              mountPath: "/etc/webhook/certs"
              readOnly: true
      volumes:
        - name: cert
          secret:
            secretName: simple-webhook-server-cert
---
apiVersion: v1
kind: Service
metadata:
  name: simple-webhook-server
  namespace: webhook-system
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: simple-webhook-server
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: simple-mutating-webhook-configuration
webhooks:
  - name: simple-webhook-server.mutating.webhook-system.io
    clientConfig:
      service:
        name: simple-webhook-server
        namespace: webhook-system
        path: "/mutating"
      caBundle: <base64-encoded-ca-cert>
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [ "" ]
        apiVersions: [ "v1" ]
        resources: [ "pods" ]
    admissionReviewVersions: [ "v1beta1", "v1" ]
    sideEffects: None
    namespaceSelector:
      matchLabels:
        name: simple-webhook
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: simple-validating-webhook-configuration
webhooks:
  - name: simple-webhook-server.validating.webhook-system.io
    clientConfig:
      service:
        name: simple-webhook-server
        namespace: webhook-system
        path: "/validating"
      caBundle: <base64-encoded-ca-cert>
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [ "" ]
        apiVersions: [ "v1" ]
        resources: [ "pods" ]
    admissionReviewVersions: [ "v1beta1", "v1" ]
    sideEffects: None
    namespaceSelector:
      matchLabels:
        name: simple-webhook
